--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "client-library"
+name = "my_test_client_library_add_to_num"
 version = "0.1.0"
 authors = [{ name = "Maxim", email = "imaks1464@gmail.com" }]
 description = "A short description of client library."
